feat: store transcript in local storage
- store transcript for the specified video when user visiting the video for the first time to avoid getting transcript from server every time.
- clear all the transcripts when a profile that has this extension installed first starts up. (close chrome and start again)
- The data format in local storage is { [videoID]: transcript }

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,19 +11,21 @@
       "256": "images/icon256.png"
     }
   },
+  "host_permissions": ["https://*.youtube.com/*"],
   "background": {
     "service_worker": "background.js",
     "type": "module"
   },
   "content_scripts": [
     {
-      "matches":["https://www.youtube.com/watch?v=*"],
+      "matches":["https://*.youtube.com/*"],
       "js": ["content.js"]
     }
   ],
   "permissions": [
     "activeTab",
     "declarativeContent",
+    "storage",
     "tabs"
   ],
   "icons": {
